z-index fix for CSS.

--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ body, html {
     width: 250px;
     height: 100%;
     position: fixed;
-    z-index: 52;
+    z-index: 53;
     top: 0;
     left: 0;
     padding: 20px;
